# nidjat-project

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/finances/: handlers.py  schemas.py
core/api/v1/receipts/: handlers.py  schemas.py
core/api/v1/transaction_requests/: filters.py  handlers.py  schemas.py
core/api/v1/transactions/: filters.py  handlers.py  schemas.py
core/api/v1/users/: filters.py  handlers.py  schemas.py
core/apps/common/: models.py
core/apps/finances/: admin.py  apps.py  models.py
core/apps/finances/entities/: finances.py
core/apps/finances/migrations/: 0001_initial.py  0002_alter_finances_amount_in_defects_and_more.py  0003_finances_debt_for_goods_amount_and_more.py  0004_cash.py
core/apps/finances/services/: finances.py
core/apps/receipts/: apps.py  models.py
core/apps/receipts/entities/: receipts.py
core/apps/receipts/migrations/: 0001_initial.py  0002_alter_receipt_file.py
core/apps/transactions/: admin.py  apps.py  models.py
core/apps/users/: admin.py  models.py
core/project/: urls.py  views.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml
staticfiles/css/: styles.min.css
staticfiles/js/: api.js  budget.js  capitalization.js  client.js  clients.js  functions.js  login.js  orders.js  purchase.js  report.js  salary.js
templates/: budget.html  capitalization.html  client.html  clients.html  login.html  orders.html  purchase.html  report.html  salary.html
(+29 files in other folders)
